--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -31,4 +31,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: yarn test
+        run: |
+          yarn install
+          yarn test
