--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -46,6 +46,12 @@ jobs:
             node-version: '14'
             registry-url: https://registry.npmjs.org/
 
+        # Runs a set of commands using the runners shell
+        - name: Run a multi-line script
+          run: |
+            yarn install
+            yarn test
+
         - name: "Deploy to Vercel"
           run: |
             prodRun=""
